--- a/kernel1a5fb60561.ipynb
+++ b/kernel1a5fb60561.ipynb
@@ -11,7 +11,7 @@
     " \n",
     " \n",
     " \n",
-    "This study investigates the effectiveness of the government measures aimed to decelerate the spread of COVID-19. The various government measures are weighted with the different time intervals of responds, calculated from the first case detected in the country. In case of lack of a measure, I used a large penalty number. COVID spread is represented by total deaths per million population (10th of July). A Random Forest model is definded to determine the main factors affecting the number of deaths in each country worldwide. Unfortunately, treeinterpreter did not work in this notebook.\n",
+    "This study investigates the effectiveness of the government measures aimed to decelerate the spread of COVID-19. The various government measures are weighted with the different time intervals of responds, calculated from the first case detected in the country. In case of lack of a measure, I used a large penalty number. COVID spread is represented by total deaths per million population (10th of July). A Random Forest model is definded to determine the main factors affecting the number of deaths in each country worldwide. \n",
     "\n",
     "Main findings:\n",
     "\n",
