--- a/FraudDetection.ipynb
+++ b/FraudDetection.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -310,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2594da8d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd1fa733bd0>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -342,16 +342,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff25947eb50>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd1f86509d0>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -381,16 +381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2593e2f90>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd1f84f6e10>"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -413,16 +413,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2472b00d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd1f845cf90>"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -445,16 +445,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff2471ab1d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd1f8322550>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,16 +562,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7ff247136390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd1fb14dbd0>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,18 +657,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression has an accuracy score of 94.0 % and a recall score of 89.0 %\n",
-      "KNeighborsClassifier has an accuracy score of 93.0 % and a recall score of 85.0 %\n",
-      "SVC has an accuracy score of 93.0 % and a recall score of 85.0 %\n",
-      "DecisionTreeClassifier has an accuracy score of 93.0 % and a recall score of 86.0 %\n",
-      "RandomForestClassifier has an accuracy score of 94.0 % and a recall score of 88.0 %\n"
+      "LogisticRegression has an accuracy score of 95.0 % and a recall score of 91.0 %\n",
+      "KNeighborsClassifier has an accuracy score of 94.0 % and a recall score of 89.0 %\n",
+      "SVC has an accuracy score of 93.0 % and a recall score of 89.0 %\n",
+      "DecisionTreeClassifier has an accuracy score of 90.0 % and a recall score of 91.0 %\n",
+      "RandomForestClassifier has an accuracy score of 94.0 % and a recall score of 89.0 %\n"
      ]
     }
    ],
@@ -693,55 +693,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model=RandomForestClassifier()"
+    "#model=LogisticRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestClassifier has an accuracy score of 100.0 % and a recall score of 0.9995956754856289 %\n"
+      "Logistic Regression model has an accuracy score of 100.0 % and a recall score of 0.78 %\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
-    "model.fit(original_Xtrain, original_ytrain)\n",
-    "prediction=model.predict(original_Xtest)\n",
-    "acc_sc=accuracy_score(prediction, original_ytest)\n",
-    "recall_sc=recall_score(prediction, original_ytest, pos_label=0)\n",
-    "print(\"RandomForestClassifier has an accuracy score of\", round(round(acc_sc, 2), 2) * 100, \"%\", \"and a recall score of\", round(recall_sc, 2), \"%\")"
+    "#model.fit(original_Xtrain, original_ytrain)\n",
+    "#prediction=model.predict(original_Xtest)\n",
+    "acc_sc=accuracy_score(original_ytest, prediction)\n",
+    "recall_sc=recall_score(original_ytest, prediction)\n",
+    "print(\"Logistic Regression model has an accuracy score of\", round(acc_sc, 2) * 100, \"%\", \"and a recall score of\", round(recall_sc, 2), \"%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recall metric in the testing dataset:  0.77\n"
+      "Recall metric in the testing dataset:  0.78\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[56862,     2],\n",
-       "       [   23,    75]])"
+       "array([[56861,     3],\n",
+       "       [   22,    76]])"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,24 +787,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IsolationForest model has an accuracy score of 0.0 % and a recall score of 0.0 %\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
-    "isof.fit(original_Xtrain)\n",
-    "isof_pred = isof.predict(original_Xtest)\n",
-    "acc_sc=accuracy_score(isof_pred, original_ytest)\n",
-    "recall_sc=recall_score(isof_pred, original_ytest, average='micro')\n",
-    "print(\"IsolationForest model has an accuracy score of\", round(acc_sc, 2) * 100, \"%\", \"and a recall score of\", round(recall_sc, 2)*100, \"%\")"
+    "lof_pred = lof.fit_predict(original_Xtrain)\n",
+    "scores_pred=lof.negative_outlier_factor_\n",
+    "acc_sc=accuracy_score(original_ytest, lof_pred)\n",
+    "recall_sc=recall_score(original_ytest, lof_pred, average='macro')\n",
+    "print(\"LocalOutlierFactor model has an accuracy score of\", round(acc_sc, 2) * 100, \"%\", \"and a recall score of\", round(recall_sc, 2)*100, \"%\")"
    ]
   },
   {
