--- a/kernel1a5fb60561.ipynb
+++ b/kernel1a5fb60561.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {},
    "source": [
-    "# Impact of interventions on curbing the impact of COVID-19\n",
+    "# Efficiency of interventions on curbing the impact of COVID-19\n",
     "\n",
     "                                                        \n",
     " \n",
